fixed content overflowing body

--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@
 
 body {
   background-color: var(--background-color);
+  height: 100vh;
 }
 
 main {
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
